--- a/app/src/main/res/layout/activity_home_map.xml
+++ b/app/src/main/res/layout/activity_home_map.xml
@@ -1,3 +1,9 @@
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context="greenstory.rtg.com.MapsActivity"
@@ -19,46 +25,10 @@
                     android:layout_height="match_parent"
                     android:layout_above="@id/tv_questions_answered"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="21dp"/>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:weightSum="3">
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="צפון"
-                            android:textSize="60dp"
-                            android:textAlignment="center"
-                            android:textColor="@color/rtgGreen"
-                            android:layout_weight="1"/>
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="מרכז"
-                            android:textAlignment="center"
-                            android:textSize="60dp"
-                            android:textColor="@color/rtgGreen"
-                            android:layout_weight="1"/>
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_alignBottom="@+id/RTG_info"
-                            android:layout_alignParentLeft="true"
-                            android:layout_alignParentStart="true"
-                            android:layout_marginBottom="17dp"
-                            android:layout_weight="1"
-                            android:text="דרום"
-                            android:textAlignment="center"
-                            android:textColor="@color/rtgGreen"
-                            android:textSize="60dp" />
-
-                </LinearLayout>
 
         </FrameLayout>
 
@@ -88,3 +58,55 @@
 
 
 </RelativeLayout>
+
+        <ListView
+            android:id="@+id/left_drawer_list"
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:choiceMode="singleChoice"
+            android:divider="@android:color/transparent"
+
+            android:dividerHeight="0dp"
+            android:background="#fff"/>
+
+</android.support.v4.widget.DrawerLayout>
+
+<!-- <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    android:weightSum="3">
+
+                        <TextView
+                            android:id="@+id/tv_north_area"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textSize="60dp"
+                            android:textAlignment="center"
+                            android:textColor="@color/rtgGreen"
+                            android:layout_weight="1"/>
+
+                        <TextView
+                            android:id="@+id/tv_center_area"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:textAlignment="center"
+                            android:textSize="60dp"
+                            android:textColor="@color/rtgGreen"
+                            android:layout_weight="1"/>
+
+                        <TextView
+                            android:id="@+id/tv_south_area"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_alignBottom="@+id/RTG_info"
+                            android:layout_alignParentLeft="true"
+                            android:layout_alignParentStart="true"
+                            android:layout_marginBottom="17dp"
+                            android:layout_weight="1"
+                            android:textAlignment="center"
+                            android:textColor="@color/rtgGreen"
+                            android:textSize="60dp" />
+
+                </LinearLayout> -->
