--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#89b983</color>
     <color name="rtgGreen">#004b3f</color>
+
+    <color name="action_bar">#ff0d0d0d</color>
+    <color name="white">#ffffffff</color>
+    <color name="off_white">#99ffffff</color>
 </resources>
