--- a/app/src/main/res/layout/activity_home_map.xml
+++ b/app/src/main/res/layout/activity_home_map.xml
@@ -63,10 +63,9 @@
             android:id="@+id/left_drawer_list"
             android:layout_width="200dp"
             android:layout_height="match_parent"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
             android:choiceMode="singleChoice"
             android:divider="@android:color/transparent"
-
             android:dividerHeight="0dp"
             android:background="#fff"/>
 
