--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,16 +11,15 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:padding="6dp"
-            android:layout_above="@id/text2"
+            android:layout_above="@id/btn_take_picture"
             android:textSize="@dimen/text_medium"
             android:textAlignment="center"
-            android:textColor="@color/rtgGreen"
-            android:text="מס' שאלות שעניתי: 0" />
+            android:textColor="@color/rtgGreen" />
 
         <Button
-            android:id="@+id/text2"
+            android:id="@+id/btn_take_picture"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:padding="6dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
