--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:context="greenstory.rtg.com.MapsActivity"
     android:layout_width="match_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="match_parent">
 
 
         <TextView
@@ -19,7 +19,7 @@
         <Button
             android:id="@+id/btn_take_picture"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="6dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
