--- a/app/src/main/res/layout/activity_maps_dialog_image.xml
+++ b/app/src/main/res/layout/activity_maps_dialog_image.xml
@@ -5,14 +5,6 @@
     android:orientation="vertical"
     android:padding="5dp">
 
-    <ImageView
-        android:id="@+id/iv_dialog_share"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:textSize="25sp"
-        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btn_share"
@@ -20,9 +12,16 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:background="@color/colorAccent"
-
         android:text="שיתוף"
         android:textColor="@android:color/white"
         android:textSize="25sp" />
+
+    <ImageView
+        android:id="@+id/iv_dialog_share"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp"/>
+
+
 
 </FrameLayout>
