--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -20,9 +20,10 @@
             android:id="@+id/btn_take_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="6dp"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:padding="6dp"
             android:text="צלם תמונה ושתף"
             android:textAlignment="center"
             android:textColor="@color/rtgGreen"
