--- a/app/src/main/res/layout/activity_home_track_dialog.xml
+++ b/app/src/main/res/layout/activity_home_track_dialog.xml
@@ -5,24 +5,47 @@
     android:orientation="vertical"
     android:padding="5dp">
 
-    <TextView
-        android:id="@+id/tv_dialog_track_details"
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="5dp"
-        android:text="מידע על אתר"
-        android:textSize="25sp"
-        android:textStyle="bold" />
+        android:layout_gravity="center">
+
+        <ImageButton
+            android:id="@+id/btn_close_track_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/tv_dialog_track_details"
+            android:src="@drawable/close_24"
+            android:background="@null"/>
+
+        <TextView
+            android:id="@+id/tv_dialog_track_details"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="כעגכעגכעגכעגכעגכעגגכעגכעגכעגכעגכעגכעגכעגכעגכ גכעגכעגכ גכעגכעגכע גכעגכעגכע גכעגכע מידע על אתר"
+            android:textSize="@dimen/text_small"
+            android:padding="6dp"
+            android:textStyle="bold" />
+
+
+
+    </LinearLayout>
+
+
 
     <Button
         android:id="@+id/btn_go_to_track"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_margin="10dp"
         android:background="@color/colorAccent"
+        android:layout_gravity="center"
+        android:padding="6dp"
         android:text="למסלול"
         android:textSize="25sp"
         android:textColor="@android:color/white" />
+
+
 
 </LinearLayout>
